syntax = "proto3";
option java_package = "Grpc";

message getUserByEmailRequest{
  string request = 1;
}
message getUserByEmailResponse{
  string response = 1;
  int32 status = 2;
}
message registerUserRequest{
  string request = 1;
}
message registerUserResponse{
  string response = 1;
  int32 status = 2;
}
service UserService{
  rpc getUserAndRoleByEmail(getUserByEmailRequest) returns(getUserByEmailResponse);
  rpc registerUser(registerUserRequest) returns(registerUserResponse);
}